deleted few unnecessary comments

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /*
-  Template Name: MedService - Medical & Medical Health Landing Page Template
+  Template Name: Dentalive Template
   Theme URL: https://themeforest.net/user/jthemes
-  Description: MedService - Medical & Medical Health Landing Page Template
+  Description: Dentalive Template
   Author: Jthemes
   Author URL: https://themeforest.net/user/jthemes
   Version: 1.0.0
