--- a/css/responsive.css
+++ b/css/responsive.css
@@ -3,9 +3,9 @@
 
 
 /*
-  Template Name: MedService - Medical & Medical Health Landing Page Template
+  Template Name: Dentalive Template
   Theme URL: https://themeforest.net/user/jthemes
-  Description: MedService - Medical & Medical Health Landing Page Template
+  Description: Dentalive Template
   Author: Jthemes
   Author URL: https://themeforest.net/user/jthemes
   Version: 1.0.0
