--- a/css/style.css
+++ b/css/style.css
@@ -63,8 +63,8 @@ body {
 /*------------------------------------------*/
 
 .wide-100 {
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 50px;
+  padding-bottom: 40px;
 }
 
 .wide-90 {
@@ -78,8 +78,8 @@ body {
 }
 
 .wide-70 {
-  padding-top: 100px;
-  padding-bottom: 70px;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 .wide-60 {
@@ -1374,6 +1374,7 @@ span.id-color {
 .section-title h3.h3-md {
   line-height: 1;
   margin-bottom: 20px;
+  padding: 10px;
 }
 
 .section-title p {
@@ -1847,7 +1848,7 @@ span.id-color {
 /*------------------------------------------*/
 
 .hero-widget {
-  padding: 15px 0;
+  padding: 5px 0;
   border-bottom: 1px solid #eee;
 }
 
